--- a/src/Home.css
+++ b/src/Home.css
@@ -10,7 +10,7 @@
 }
 
 .titlex {
-    color:black;
+    color:#181B1F;
     background-color: white;
     padding-top: 5px;
     text-align: center;
