--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .NavbarItems {
    
-    background-color: black;
+    background-color: #181B1F;
     height: 100px;
     display: flex;
     justify-content: center;
@@ -76,7 +76,7 @@
     }
 
     .nav-menu.active {
-        background: black;
+        background: #181B1F;
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
