--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .items {
-    background-color: black;
+    background-color: #181B1F;
     height: 100px;
     display: flex;
     justify-content: center;
@@ -7,6 +7,8 @@
     font-size: 1rem;
     
 }
+
+
 .logo {
     width: 125px;
     height:125px;
